--- a/bin/directories/key-figures/table.hbs
+++ b/bin/directories/key-figures/table.hbs
@@ -2,6 +2,9 @@
     {{#each this}}
         <div class="ld-item-container">
             <div class="ld-figure-name">{{name}}</div>
+            {{#if source}}
+            <div class="md-figure-source">{{source}}</div>
+            {{/if}}
             <div class="md-value--small">{{value}}</div>
             {{#if owner}}
             <img alt='' class='ld-item-pic' src='{{img}}' loading='lazy' />
