--- a/bin/directories/events/card.hbs
+++ b/bin/directories/events/card.hbs
@@ -37,7 +37,7 @@
           <div class="panel-info">
             {{#if (ne venueName '')}}
             <div class="location-container">
-            <img alt='{{country}}' class='flag' src='{{flag}}' loading="lazy"/>
+            <img alt='{{country}}' class='flag' src='{{flagUrl}}' loading="lazy"/>
             <h3 class="city-name">{{city}}</h3>
             </div>
             <span class="place">{{venueName}}</span>
