ops-table update

--- a/bin/people/ops-table.hbs
+++ b/bin/people/ops-table.hbs
@@ -13,7 +13,9 @@
             </div>
         </div>
         <div class="lp-item-attributes">
-            <div class="lp-item-team">{{team}}</div>
+            <div class="lp-item-team">
+                <div class="chip">{{team}}</div>
+            </div>
             <div class="lp-item-contacts">
                 {{#if email}}
                     <div class="cat-email">{{email}}</div>
