--- a/bin/people/ops-table.hbs
+++ b/bin/people/ops-table.hbs
@@ -18,7 +18,10 @@
             </div>
             <div class="lp-item-contacts">
                 {{#if email}}
-                    <div class="cat-email">{{email}}</div>
+                    <div class="cat-email">
+                        <div class="email-address">{{email}}</div>
+                        <button class="md-clipboard md-icon" data-clipboard-target="{{email}}"></button>
+                    </div>
                 {{/if}}
                 {{#if linkedIn}}
                 <div class="cat-linkedin">
