ops-table hbs updates

--- a/bin/people/ops-table.hbs
+++ b/bin/people/ops-table.hbs
@@ -20,7 +20,7 @@
                 {{#if email}}
                     <div class="cat-email">
                         <div class="email-address">{{email}}</div>
-                        <button class="md-clipboard md-icon" data-clipboard-target="{{email}}"></button>
+                        <a class="md-clipboard md-icon" data-clipboard-target="{{email}}"></a>
                     </div>
                 {{/if}}
                 {{#if linkedIn}}
