--- a/bin/people/ops-table.hbs
+++ b/bin/people/ops-table.hbs
@@ -20,7 +20,8 @@
                 {{#if email}}
                     <div class="cat-email">
                         <div class="email-address">{{email}}</div>
-                        <a class="md-clipboard md-icon" data-clipboard-target="{{email}}"></a>
+                        <a class="md-clipboard md-icon" href="mailto:{{email}}"></a>
+                        <!-- <a class="md-clipboard md-icon" data-clipboard-target="{{email}}"></a> -->
                     </div>
                 {{/if}}
                 {{#if linkedIn}}
