directory and people figures hbs updates

--- a/bin/directories/directory-figures/table.hbs
+++ b/bin/directories/directory-figures/table.hbs
@@ -1,4 +1,10 @@
 <div class="list-directory">
+    <div class="ld-head">
+            <div class="ld-item-name">Figure</div>
+            <div class="ld-item-value">Value</div>
+            <div class="ld-item-owner">Owner</div>
+            <div class="ld-item-source">Source</div>
+    </div>
     {{#each this}}
         <div class="ld-item-container">
             <div class="ld-figure-name">{{name}}</div>
