--- a/bin/directories/ihubs/card.hbs
+++ b/bin/directories/ihubs/card.hbs
@@ -1,6 +1,9 @@
 {{#each this}}
     <div class='grid-item {{createClass type}} {{createClasses domain}} {{createClass country}}'>
-        <img class="gridElementLogo" src="{{img}}" {{#if (gt @index 9)}}loading="lazy"{{/if}}>
+        <picture>
+           <source srcset="{{webp img}}" type="image/webp">
+           <img class="gridElementLogo" src="{{img}}" {{#if (gt @index 9)}}loading="lazy"{{/if}}>
+        </picture>
         <div class="gridElementTextContainer">
             <div class="label-location">
                 <h3>{{city}}</h3>
