--- a/bin/directories/ihubs/card.hbs
+++ b/bin/directories/ihubs/card.hbs
@@ -1,14 +1,16 @@
 {{#each this}}
     <div class='grid-item {{createClass type}} {{createClasses domain}} {{createClass country}}'>
-        <picture>
-           <source srcset="{{webp img}}" type="image/webp">
-           <img class="gridElementLogo" src="{{img}}" {{#if (gt @index 9)}}loading="lazy"{{/if}}>
-        </picture>
+        <div class="gridElementLogoContainer">
+            <picture>
+               <source srcset="{{webp img}}" type="image/webp"/>
+               <img class="gridElementLogo" src="{{img}}" loading="lazy"/>
+            </picture>
+        </div>
         <div class="gridElementTextContainer">
             <div class="label-location">
                 <h3>{{city}}</h3>
                 {{#if country}}
-                    <img alt='{{country}}' class='flag' src='{{flagUrl}}' {{#if (gt @index 9)}}loading="lazy"{{/if}}/>
+                    <img alt='{{country}}' class='flag' src='{{flagUrl}}' loading="lazy"/>
                 {{/if}}
             </div>
             <h6 class="ihub-name">{{name}}</h6>
