--- a/bin/people/tech-table.hbs
+++ b/bin/people/tech-table.hbs
@@ -18,7 +18,7 @@
                         {{#if email}}
                             <div class="cat-email">
                                 <div class="email-address">{{email}}</div>
-                                <a class="md-clipboard md-icon" href="mailto:{{email}}"></a>
+                                <a class="md-clipboard md-icon" href="mailto:{{email}}" data-original-title="Copied to clipboard"></a>
                             </div>
                         {{/if}}
                         {{#if linkedIn}}
