--- a/directories/people/style.css
+++ b/directories/people/style.css
@@ -514,6 +514,9 @@
 
 .city-photo-container {
     width: 130px;
+    height:0; 
+    padding-top: 130px;
+    position:relative;
     margin: 0 auto 10px auto;
 }
 
@@ -522,6 +525,10 @@
     width: 130px;
     border: 3px solid #002e67;
     margin: 0 auto 10px auto;
+    position:absolute; 
+    background-color: #e2e9ea;
+    top:0; 
+    left:0;
 }
 
 .flag {
