--- a/bin/people/speaker-card.hbs
+++ b/bin/people/speaker-card.hbs
@@ -11,10 +11,12 @@
             {{/if}}
         >
             <div class='f-cat active'>
-                <picture>
-                   <source srcset="{{webp img}}" type="image/webp"/>
-                   <img alt='' class='city-photo' src='{{img}}' loading='lazy' />
-                </picture>
+                 <div class='city-photo-container'>
+                    <picture>
+                       <source srcset="{{webp img}}" type="image/webp"/>
+                       <img alt='' class='city-photo' src='{{img}}' loading='lazy' />
+                    </picture>
+                </div>
                 <div class='profile-details'>
                     <h6 class='name'>{{title}}{{name}}</h6>
                     <h4 class='position'>{{job}}</h4>
