--- a/directories/organisations/style.css
+++ b/directories/organisations/style.css
@@ -229,10 +229,26 @@ input[type="radio"]:checked+label[for="citiesCheck"]::after {
     width: 0;
 }
 
+
 .grid-item img {
     width: auto;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
+}
+
+
+.member-thumb-container {
+    width:100%;
+    height:0; 
+    padding-top: 56%;
+    position:relative;
+}
+
+.member-thumb {
+    width: 100%;
+    position:absolute; 
+    top:0; 
+    left:0;
 }
 
 .company-certified {
