--- a/bin/directories/impact-stories/card.hbs
+++ b/bin/directories/impact-stories/card.hbs
@@ -1,8 +1,12 @@
 {{#each this}}
     <div class='grid-item {{createClass type}} {{createClasses domain}} {{year}} {{createClass language}}'>
     <a href="{{website}}">
-        <img class="gridElementLogo"
-            src="{{thumbnail}}" {{#if (gt @index 9)}}loading="lazy"{{/if}}>
+        <div class="gridElementLogoContainer">
+            <picture>
+               <source srcset="{{webp thumbnail}}" type="image/webp"/>
+               <img class="gridElementLogo" src="{{thumbnail}}" loading="lazy"/>
+            </picture>
+        </div>
     </a>
     <div class="gridElementTextContainer">
         <span class="year hidden">{{year}}</span>
