--- a/directories/marketing-toolbox/style.css
+++ b/directories/marketing-toolbox/style.css
@@ -101,8 +101,18 @@
     margin: 0 auto;
 }
 
+.gridElementLogoContainer {
+    width:100%;
+    height:0; 
+    padding-top: 56%;
+    position:relative;
+}
+
 .gridElementLogo {
     width: 100%;
+    position:absolute;
+    top:0; 
+    left:0;
 }
 
 .gutter-sizer {
