--- a/bin/directories/webinars/card.hbs
+++ b/bin/directories/webinars/card.hbs
@@ -1,7 +1,10 @@
 {{#each this}}
     <div class='grid-item {{createClass type}} {{createClasses domain}} {{createClasses technology}}'>
-        <div class='gridElementLogo'>
-            <img src='{{img}}' alt=''{{#if (gt @index 9)}}loading="lazy"{{/if}} />
+        <div class="gridElementLogoContainer">
+            <picture>
+               <source srcset="{{webp img}}" type="image/webp"/>
+               <img class="gridElementLogo" src="{{img}}" loading="lazy"/>
+            </picture>
         </div>
         <div class='gridElementTextContainer'>
             <div class='label-type'>
