--- a/directories/organisations/style.css
+++ b/directories/organisations/style.css
@@ -248,7 +248,7 @@ input[type="radio"]:checked+label[for="citiesCheck"]::after {
     width: 100%;
     position:absolute; 
     top:0; 
-    left:0;
+    left:1px;
 }
 
 .company-certified {
