--- a/directories/cities/style.css
+++ b/directories/cities/style.css
@@ -165,8 +165,19 @@ details summary::-webkit-details-marker {
     margin: 0 auto;
 }
 
+.gridElementLogoContainer {
+    width:100%;
+    height:0; 
+    padding-top: 56%;
+    position:relative;
+}
+
 .gridElementLogo {
     width: 100%;
+    position:absolute; 
+    background-color: #e2e9ea;
+    top:0; 
+    left:left:1px;
 }
 
 .maplibregl-popup-content .gridElementLogo {
