--- a/directories/ihubs/style.css
+++ b/directories/ihubs/style.css
@@ -180,7 +180,7 @@ details summary::-webkit-details-marker {
     position:absolute; 
     background-color: #e2e9ea;
     top:0; 
-    left:0;
+    left:1px;
 }
 
 .gutter-sizer {
