--- a/directories/cities/style.css
+++ b/directories/cities/style.css
@@ -177,7 +177,7 @@ details summary::-webkit-details-marker {
     position:absolute; 
     background-color: #e2e9ea;
     top:0; 
-    left:left:1px;
+    left:1px;
 }
 
 .maplibregl-popup-content .gridElementLogo {
