--- a/directories/research-development/style.css
+++ b/directories/research-development/style.css
@@ -101,8 +101,19 @@
     margin: 0 auto;
 }
 
+.gridElementLogoContainer {
+    width:100%;
+    height:0; 
+    padding-top: 56%;
+    position:relative;
+}
+
 .gridElementLogo {
     width: 100%;
+    position:absolute; 
+    background-color: #e2e9ea;
+    top:0; 
+    left:1px;
 }
 
 .gutter-sizer {
