--- a/bin/directories/research-development/card.hbs
+++ b/bin/directories/research-development/card.hbs
@@ -2,10 +2,10 @@
     <div class='grid-item {{createClass type}} {{createClasses domains}} {{createClass country}}  {{createClass year}}'>
         <span class="year hidden">{{year}}</span>
         <a href="./project?id={{createClass name}}">
-            <div class="thumb">
+            <div class="gridElementLogoContainer">
                 <picture>
                     <source srcset="{{webp img}}" type="image/webp"/>
-                    <img class="project-logo" src="{{img}}" loading="lazy"/>
+                    <img class="gridElementLogo" src="{{img}}" loading="lazy"/>
                 </picture>
             </div>
         </a>
