--- a/directories/events-directory/style.css
+++ b/directories/events-directory/style.css
@@ -274,7 +274,7 @@
 }
 
 .gridElementLogoContainer {
-    width:100%;
+    width:50%;
     height:0; 
     padding-top: 52%;
     position:relative;
@@ -603,17 +603,18 @@
     gap: 8px;
 }
 
-.profile-picture {
+.profile-picture-container {
     width: 64px;
     min-width: 60px;
     max-width: 64px;
     height: 64px;
 }
 
-.profile-picture img {
-    height: auto;
+
+.profile-picture {
+    width: 100%
+    height: 100%;
     border-radius: 50px;
-    /* border: 2px solid #cce0f0; */
 }
 
 .speaker-info {
