--- a/directories/events-directory/style.css
+++ b/directories/events-directory/style.css
@@ -1637,8 +1637,9 @@ input[type="search"]::placeholder {
         max-width: none;
     }
 
-    .gridElementLogo {
+    .gridElementLogoContainer {
         width: 100%;
+        padding-top: 55%;
     }
 
     .panel-info {
