Add modal links.

--- a/bin/directories/enablers/card.hbs
+++ b/bin/directories/enablers/card.hbs
@@ -30,7 +30,7 @@
         </div>
         <div class='foot'>
             {{#if (eq member true)}}
-            <a class='cat-info' data-modal='{{math @index "+" 6}}'>
+            <a href='#enabler-{{createClass name}}' class='cat-info' data-modal='{{math @index "+" 6}}'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </a>
