--- a/bin/people/card.hbs
+++ b/bin/people/card.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-    <div id='item-{{@index}}'
+    <div 
         class='grid-item
             {{createClass company}}
             {{createClass country}}
@@ -7,6 +7,7 @@
             {{createClasses filters}}
             {{createClass domain}}'
     >
+        <div class="grid-scroll-offset" id='item-{{@index}}'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
