--- a/bin/people/card.hbs
+++ b/bin/people/card.hbs
@@ -7,7 +7,7 @@
             {{createClasses filters}}
             {{createClass domain}}'
     >
-        <div class="grid-scroll-offset" id='item-{{@index}}'/>
+        <span class="grid-scroll-offset" id='item-{{@index}}'/>
         <div class='f-cat active'>
             <div class='city-photo-container'>
                 <picture>
