--- a/bin/people/card.hbs
+++ b/bin/people/card.hbs
@@ -34,7 +34,7 @@
             </div>
             <div class='icons'>
                 {{#if bio}}
-                    <a href="#item-{{@index}}" class='cat-bio' data-modal='{{@index}}'><span class='icon bio'></span></a>
+                    <div href="#item-{{@index}}" class='cat-bio' data-modal='{{@index}}'><span class='icon bio'></span></div>
                 {{/if}}
                 {{#if twitter}}
                     <a class='cat-twitter' target='_blank' href='{{twitter}}' rel='noopener'><span
