--- a/bin/directories/press/table.hbs
+++ b/bin/directories/press/table.hbs
@@ -1,14 +1,14 @@
 <div class="list-directory">
-    <!-- <div class="ld-head">
-            <div class="ld-publication-name">Name</div>
-            <div class="ld-type">Type</div>
-            <div class="ld-domain">Domain</div>
-    </div> -->
+    <div class="ld-head">
+            <div class="ld-publication-name">Title</div>
+            <div class="ld-date">Date</div>
+            <div class="ld-item-topic">Topic</div>
+    </div>
     {{#each this}}
         <div class="ld-item-container">
             <div class="ld-publication-name">{{title}}</div>
-            <div class="ld-type">{{date}}</div>
-            <div class="lp-item-team">
+            <div class="ld-date">{{date}}</div>
+            <div class="ld-item-topic">
                 <div class="chip">{{topic}}</div>
             </div>
             <div class="ld-icons-container">
