--- a/directories/people/style.css
+++ b/directories/people/style.css
@@ -914,7 +914,7 @@
 
     .f-cat {
         width: 100%;
-        padding: 30px 0px;
+        padding: 30px 0px 15px;
     }
 
     .f-cat:hover {
@@ -947,7 +947,7 @@
     }
 
     .icons {
-        padding-top: 0px;
+        padding-top: 15px;
         /* display: flex; */
         flex-direction: row;
         text-align: center;
