--- a/bin/people/card.hbs
+++ b/bin/people/card.hbs
@@ -14,6 +14,9 @@
                 </a>
                 {{/if}}
                 <div class='profile-details'>
+                {{#if bio}}
+                <a class='cat-bio' href="#item-{{@index}}" data-modal='{{@index}}'>
+                {{/if}}
                     <h6 class='name'>{{title}}{{name}}</h6>
                     <h4 class='position'>{{job}}</h4>
                     <a target='_blank' href='{{website}}' rel='noopener'>
@@ -30,6 +33,9 @@
                         <div class='chip-domain'>{{domain}}</div>
                     {{/if}}
                 </div>
+                {{#if bio}}
+                </a>
+                {{/if}}
                 <div class='icons'>
                     {{#if linkedIn}}
                         <a class='cat-linkedin' target='_blank' href='{{linkedIn}}' rel='noopener'><span
