--- a/bin/templates/research-development/table.hbs
+++ b/bin/templates/research-development/table.hbs
@@ -10,7 +10,7 @@
             <div class="ld-figure-name">{{name}}</div>
             <div class="ld-type">{{country}}</div>
             {{#if responsible}}
-            <img alt='' class='ld-item-pic' src='{{img}}' loading='lazy' />
+            <img alt='' class='ld-item-pic' src='{{responsibleUrl}}' loading='lazy' />
             <div class="ld-item-name">{{responsible}}</div>
             {{/if}}
             <div class="ld-icons-container">
