Remove Profile Picture

--- a/bin/templates/directory-figures/table.hbs
+++ b/bin/templates/directory-figures/table.hbs
@@ -10,7 +10,7 @@
             <div class="ld-figure-name">{{name}}</div>
             <div class="md-value--small">{{value}}</div>
             {{#if owner}}
-            <img alt='' class='ld-item-pic' src='{{img}}' loading='lazy' />
+            <img alt='' class='ld-item-pic' src='{{image}}' loading='lazy' />
             <div class="ld-item-name">{{owner}}</div>
             {{/if}}
             {{#if source}}
